--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "twbs/bootstrap": "^3.3"
+        "twbs/bootstrap": "^3.3",
+        "whitehat101/apr1-md5": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
