Categories are now customizable + code refactoring

--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "edno/kleis",
+    "description": "Squid Guard Basic Front End",
+    "keywords": ["users", "management"],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "twbs/bootstrap": "^3.3",
+        /*"twbs/bootstrap": "^3.3",*/
         "whitehat101/apr1-md5": "~1.0"
     },
     "require-dev": {
@@ -40,12 +40,12 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan vendor:publish --tag=public --force",
+            /*"php artisan vendor:publish --tag=public --force",*/
             "php artisan optimize"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan vendor:publish --tag=public --force",
+            /*"php artisan vendor:publish --tag=public --force",*/
             "php artisan optimize"
         ]
     },
