--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -13,3 +13,11 @@ modules:
             url: http://kleis.app:8000
             browser: phantomjs
             window_size: maximize
+        - Db:
+            dsn: 'mysql:host=127.0.0.1;port=33060;dbname=homestead'
+            user: 'homestead'
+            password: 'secret'
+            dump: 'tests/_data/dump.sql'
+            populate: true
+            cleanup: false
+            reconnect: false
