--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -9,3 +9,16 @@ settings:
     bootstrap: _bootstrap.php
     colors: true
     memory_limit: 1024M
+extensions:
+    enabled:
+        - Codeception\Extension\EventsScripting
+    config:
+        Codeception\Extension\EventsScripting:
+            BeforeAll:
+                - command: ./tests/_bin/phantomjs_start.sh
+                  description: Start PhantomJS
+                  environments: appWeb
+            AfterAll:
+                - command: ./tests/_bin/phantomjs_stop.sh
+                  description: Stop PhantomJS
+                  environments: appWeb
