--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "whitehat101/apr1-md5": "~1.0",
-        "codeception/codeception": "^2.2"
+        "whitehat101/apr1-md5": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -16,7 +15,9 @@
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
-        "laravel/homestead": "^3.0"
+        "laravel/homestead": "^3.0",
+        "oprudkyi/codeception-events-scripting": "*",
+        "codeception/codeception": "^2.2"
     },
     "autoload": {
         "classmap": [
