--- a/tests/acceptance.suite.dist.yml
+++ b/tests/acceptance.suite.dist.yml
@@ -10,3 +10,10 @@ modules:
         - Asserts
         - Cli
         - Filesystem
+        - Db:
+            dsn: 'mysql:host=127.0.0.1;port=3306;dbname=kleis'
+            user: 'kleis'
+            password: 'secret'
+            populate: false
+            cleanup: false
+            reconnect: false
