--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+            "tests/_data"
         ],
         "psr-4": {
             "App\\": "app/"
