--- a/tests/acceptance.suite.dist.yml
+++ b/tests/acceptance.suite.dist.yml
@@ -12,3 +12,6 @@ modules:
         - Filesystem
         - Laravel5:
             environment_file: .env.codecept
+            part: ORM
+            cleanup: false
+        - Helper\Laravel5Record
