Move Laravel seeding to Lavaral5Extension instead of bootstrap

--- a/tests/acceptance.suite.dist.yml
+++ b/tests/acceptance.suite.dist.yml
@@ -14,4 +14,4 @@ modules:
             environment_file: .env.codecept
             part: ORM
             cleanup: false
-        - Helper\Laravel5
+        - Helper\Laravel5Extension
