--- a/tests/acceptance.suite.dist.yml
+++ b/tests/acceptance.suite.dist.yml
@@ -12,6 +12,5 @@ modules:
         - Filesystem
         - Laravel5:
             environment_file: .env.codecept
-            part: ORM
-            cleanup: false
+            part: orm
         - Helper\Laravel5Extension
