--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -9,6 +9,8 @@ settings:
     bootstrap: _bootstrap.php
     colors: true
     memory_limit: 1024M
+params:
+    - .env.codecept
 extensions:
     enabled:
         - Codeception\Extension\EventsScripting
