--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ before_script:
   - php artisan serve >/dev/null 2>&1 &
 
 script:
-  - vendor/bin/codecept run acceptance --env appWeb,withRecords --env appCli,withRecords --env appCli,noRecords -f --debug
+  - vendor/bin/codecept run acceptance --env appWeb,withRecords --env appCli,withRecords --env appCli,noRecords -f
