Silent and ignore error whilst stopping phatomjs

--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -24,3 +24,4 @@ extensions:
                 - command: ./tests/_bin/phantomjs_stop.sh
                   description: Stop PhantomJS
                   environments: appWeb
+                  ignoreErrors: true
