Set continuous testing (#1)
* codeception bootstrap

* Fix Administators page

* Add id to navbar

* Add tooltip to status icon in Administators page

* Add tests [WIP]

* Fix admin edition issue

* Update tests [WIP]

* Fix composer.json

* Update tests [WIP]

* Add whitelist tests [WIP]

* fix typo issue for buttons with label 'Enregister' instead of 'Enregistrer'

* Update tests [WIP]

* Update test [WIP] (fix)

* Update tests to WebDriver

* Update tests [WIP]

* Add DB management for tests

* Update tests with environment (required for cli tests)

* Secure environment execution (codeception issue-3502)

* Fix tests (why commiting tests that are not runnning?? :/ )

* Better tests environment management (should be documented in Codeception docs)

* Exclude Codeception generated files from repo

* add cli export tests

* fix exports when no records exists

* update codeception config file to .dist.yml (.yml only for local config)

* fix test env appcli.dist.yml (no laravel specific for dist)

* Delete appCli.yml

* Add pgsql support

* Add Procfile for Apache2 on Heroku

* fix User and Account status issue on pgsql

* minor fix ManageProxyListCest

* Add phantomjs commands to codeception runner

* refactorisation of codeception config files

* move to Laravel5 module for Codeception tests (more flexible for env mgt)

* Update composer for using custom seeder location with Artisan

* Add customer seeder for testing

* Update Acceptance test config for using Laravel5 ORM with custom helper for ORM extended functions

* Add test database seeders (Laravel5)

* Remove sql test dump (Codeception/Db)

* Remove obsolete application database seeders

* remove unused file

* Rename Lavarel5 helper

* Move Laravel seeding to Lavaral5Extension instead of bootstrap

* Fix users seeder for tests

* Update mass assignment properties

* Update phantom stop script

* Fix account seeder for t

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,16 @@
 /public/storage
 Homestead.yaml
 Homestead.json
-.env
+.env*
+!.env.example
+!.env.codecept
 /.vagrant
 /resources/assets/bower
 /.ssh
+
+tests/_output/*
+tests/_support/_generated/*
+codecept
+*.yml
+!*.dist.yml
+!.travis.yml
