--- a/composer.json
+++ b/composer.json
@@ -15,20 +15,18 @@
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
-        "laravel/homestead": "^3.0"
+        "laravel/homestead": "^3.0",
+        "oprudkyi/codeception-events-scripting": "*",
+        "codeception/codeception": "^2.2"
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+            "tests/_data"
         ],
         "psr-4": {
             "App\\": "app/"
         }
-    },
-    "autoload-dev": {
-        "classmap": [
-            "tests/TestCase.php"
-        ]
     },
     "scripts": {
         "post-root-package-install": [
