--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "whitehat101/apr1-md5": "~1.0",
-        "graham-campbell/markdown": "^7.0"
+        "graham-campbell/markdown": "^7.0",
+        "rachidlaasri/laravel-installer": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
