--- a/.env.codecept
+++ b/.env.codecept
@@ -2,7 +2,7 @@ APP_ENV=local
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost:8000/
-
+KLEIS_INSTALLER_ENABLED=false
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
