--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,15 @@
         "codeception/codeception": "^2.2"
     },
     "autoload": {
-        "classmap": [
-            "database",
-            "tests/_data"
-        ],
         "psr-4": {
             "App\\": "app/"
         }
+    },
+    "autoload-dev": {
+        "classmap": [
+            "database",
+            "tests/_data"
+        ]
     },
     "scripts": {
         "post-root-package-install": [
