--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require-dev": {
         "laravel/homestead": "^3.0",
         "oprudkyi/codeception-events-scripting": "*",
-        "codeception/codeception": "^2.2"
+        "codeception/codeception": ">=2.2"
     },
     "autoload": {
         "psr-4": {
