--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,12 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
-        "whitehat101/apr1-md5": "~1.0",
-        "graham-campbell/markdown": "^7.0"
+        "laravel/framework": "~5.7",
+        "whitehat101/apr1-md5": "~1.0"
     },
     "require-dev": {
-        "laravel/homestead": "^3.0",
         "oprudkyi/codeception-events-scripting": "*",
-        "codeception/codeception": ">=2.2"
+        "codeception/codeception": "^2.5.2"
     },
     "autoload": {
         "psr-4": {
@@ -32,14 +29,6 @@
         ],
         "post-create-project-cmd": [
             "php artisan key:generate"
-        ],
-        "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
-        ],
-        "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
         ],
         "build-archive": [
             "composer archive --format=zip --dir=bin/"
