Block codeception to v2.5.2 (bug codeception/codeception#5389)

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     },
     "require-dev": {
         "oprudkyi/codeception-events-scripting": "*",
-        "codeception/codeception": "^2.5.2"
+        "codeception/codeception": "2.5.2"
     },
     "autoload": {
         "psr-4": {
