--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         "whitehat101/apr1-md5": "~1.0"
     },
     "require-dev": {
-        "codeception/codeception": "~2.5",
-        "site5/phantoman": "^2.0"
+        "codeception/codeception": "~2.5"
     },
     "autoload": {
         "psr-4": {
