--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Lib/String.php"
+        ]
     },
     "autoload-dev": {
         "classmap": [
